--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,4 +1,27 @@
+<!DOCTYPE html>
 
+<!--Estilo CSS 
+PropiedadCSS: valorPropuedadCSS;-->
+<html lang="en" style="background-color:#3690a2;">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Aprendiendo HTML</title>
+</head>
+
+<body style="background-color:#62b99c;">
+    <h1>Caballeros del Zodiaco</h1>
+
+    <img src="https://static.betazeta.com/www.fayerwayer.com/up/2015/02/Armaduras-de-Caballeros-del-Zodiaco-en-tama%C3%B1o-real-llegar%C3%A1n-a-M%C3%A9xico-960x623.jpg" alt="Caballero Dorado">
+    <p style="background-color:#97bcc3;">Saint Seiya (聖闘士星矢, Seinto Seiya?), conocido en español como Los Caballeros del Zodiaco, es un manga shōnen creado en 1986 por Masami Kurumada y publicado originalmente desde enero del mismo año en la revista Shūkan Shōnen Jump de la editorial Shūeisha hasta diciembre de 1990. Fue adaptado posteriormente en una serie de anime de 145 episodios. También se han producido cinco películas animadas y una película con animación CG, además de varias precuelas y secuelas oficiales de la historia original.</p>
+    <h2>Cabecera menos grande</h2>
+    <h3>Cabecera 3</h3>
+    <h4>Cabecera 4</h4>
+    <h5>Cabecera 5</h5>
+    <h6>Cabecera 6</h6>
+</body>
+
+</html>
 
 
 
