--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,64 +2,22 @@
 
 <!--Estilo CSS 
 PropiedadCSS: valorPropuedadCSS;-->
-<html lang="en" style="background-color:#3690a2;">
+
+<!--Clase 1
+
+> npm install -g http-server;
+> http-server -c10-->
+
+
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Aprendiendo HTML</title>
+    <title>Aprendiendo CSS</title>
 </head>
 
-<body style="background-color:#62b99c;">
-    <h1>Caballeros del Zodiaco</h1>
-    <img src="https://static.betazeta.com/www.fayerwayer.com/up/2015/02/Armaduras-de-Caballeros-del-Zodiaco-en-tama%C3%B1o-real-llegar%C3%A1n-a-M%C3%A9xico-960x623.jpg" alt="Caballero dorado posando" ;>
+<body>
 
-    <a href="https://es.wikipedia.org/wiki/Saint_Seiya" ; target="_blank">
-        Caballeros del Zodiaco Wikipedia
-    <img src="https://static.betazeta.com/www.fayerwayer.com/up/2015/02/Armaduras-de-Caballeros-del-Zodiaco-en-tama%C3%B1o-real-llegar%C3%A1n-a-M%C3%A9xico-960x623.jpg" alt="Caballero dorado posando"; >
-    </a>
-
-
-    <br>
-    <br>
-
-    <p style="background-color:#97bcc3;">Saint Seiya (聖闘士星矢, Seinto Seiya?), conocido en español como Los Caballeros del Zodiaco, es un manga shōnen creado en 1986 por Masami Kurumada y publicado originalmente desde enero del mismo año en la revista Shūkan Shōnen Jump de la editorial Shūeisha hasta diciembre de 1990. Fue adaptado posteriormente en una serie de anime de 145 episodios. También se han producido cinco películas animadas y una película con animación CG, además de varias precuelas y secuelas oficiales de la historia original.</p>
-
-
-    <!--    Lista NO ORDENADA Unordered list-->
-    <h3>Listas no ordenada</h3>
-    <p>Sin EMMET</p>
-    <ul>
-        <!--    List item-->
-        <li>Saint Seiya</li>
-        <li>Aioria</li>
-        <li>Shiryu</li>
-
-    </ul>
-
-    <!--    Usando EMMET    ul>li*3-->
-
-    <p>Con EMMET</p>
-    <ul>
-        <li>Saint Seiya</li>
-        <li>Aioria</li>
-        <li>Shiryu</li>
-    </ul>
-
-    <!--   Listas Ordenadas Ordered Lists-->
-    <h3>Listas Ordenadas</h3>
-    <ol>
-        <!--    List item-->
-        <li>Saint Seiya</li>
-        <li>Aioria</li>
-        <li>Shiryu</li>
-
-    </ol>
-
-    <h2>Cabecera menos grande</h2>
-    <h3>Cabecera 3</h3>
-    <h4>Cabecera 4</h4>
-    <h5>Cabecera 5</h5>
-    <h6>Cabecera 6</h6>
 </body>
 
 </html>
