Estilos en cascada y archivos

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,20 +14,23 @@ PropiedadCSS: valorPropuedadCSS;-->
 <head>
     <meta charset="UTF-8">
     <title>Aprendiendo CSS</title>
-    <link rel="stylesheet" href="estilos.css">
-        
-    
+    <link rel="stylesheet" href="Estilos1/estilos.css">
+    <link rel="stylesheet" href="Estilos1/estilosDylan.css">
+    <link rel="stylesheet" href="Estilos1/estilosPepito.css">
+
+    <!-- Referenciar archivos de estilo-->
+
 </head>
 
 <body>
 
-<h1>Hola</h1>
-<p class="nombreClaseRojo">Párrafo rojo</p>
-<h1 class="nombreClaseAmarillo">Amigos</h1>
-<p class="nombreClaseAzul">Párrafo azul</p>
-<h1>Amigos Poli</h1>
-<p id="parrafoFucsia" class="nombreClaseAmarillo">Párrafo Amarillo</p>
-<p>Párrafo sin clase</p>
+    <h1>Hola</h1>
+    <p class="nombreClaseRojo">Párrafo rojo</p>
+    <h1 class="nombreClaseAmarillo">Amigos</h1>
+    <p class="nombreClaseAzul">Párrafo azul</p>
+    <h1>Amigos Poli</h1>
+    <p id="parrafoFucsia" class="nombreClaseAmarillo">Párrafo Amarillo</p>
+    <p>Párrafo sin clase</p>
 
 </body>
 
