--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,9 +14,11 @@ PropiedadCSS: valorPropuedadCSS;-->
 <head>
     <meta charset="UTF-8">
     <title>Aprendiendo CSS</title>
-    <link rel="stylesheet" href="Estilos1/estilos.css">
-    <link rel="stylesheet" href="Estilos1/estilosDylan.css">
-    <link rel="stylesheet" href="Estilos1/estilosPepito.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Referenciar archivos de estilo-->
 
@@ -25,12 +27,30 @@ PropiedadCSS: valorPropuedadCSS;-->
 <body>
 
     <h1>Hola</h1>
-    <p class="nombreClaseRojo">Párrafo rojo</p>
-    <h1 class="nombreClaseAmarillo">Amigos</h1>
-    <p class="nombreClaseAzul">Párrafo azul</p>
-    <h1>Amigos Poli</h1>
-    <p id="parrafoFucsia" class="nombreClaseAmarillo">Párrafo Amarillo</p>
-    <p>Párrafo sin clase</p>
+    <!--    .container-->
+    <div class="container" style="background-color:yellow;">
+
+        <!--    .row*3    -->
+
+        <div class="row" style="background-color:green;">
+            <h1>Fila 1</h1>
+
+        </div>
+        <div class="row" style="background-color:blue;">
+            <h1>Fila 2</h1>
+
+        </div>
+        <div class="row" style="background-color:red;">
+            <h1>Fila 3</h1>
+            
+        </div>
+
+     <h1>Hola estoy dentro del DIV</h1>
+    </div>
+
+
+  
+
 
 </body>
 
