--- a/HTML/index.html
+++ b/HTML/index.html
@@ -91,6 +91,15 @@ PropiedadCSS: valorPropuedadCSS;-->
                <h3>CLG6 - 2 </h3>
            </div>
             
+<!--            .row>.col-xs-2.borde+.col-xs-5.borde*2->-->
+            <div class="row">
+                <div class="col-xs-2 borde"></div>
+                <h2>CXS2 -1 </h2>
+                <div class="col-xs-5 borde"></div>
+                <h2>CXS2 -2 </h2>
+                <div class="col-xs-5 borde"></div>
+                <h2>CXS2 -3</h2>
+            </div>
         </div>
 
      <h1>Hola estoy dentro del div</h1>
