--- a/HTML/index.html
+++ b/HTML/index.html
@@ -41,16 +41,15 @@ PropiedadCSS: valorPropuedadCSS;-->
 
     </p>
 
-    <h1>Instrucciones de teclado</h1> 
-    No se permite usar <kbd>control</kbd><kbd>+</kbd><kbd>c</kbd>.
+    <h1>Instrucciones de teclado</h1> No se permite usar <kbd>control</kbd><kbd>+</kbd><kbd>c</kbd>.
     <br>
 
 
     <h1>Tablas</h1>
     <!--Tablas-->
-<!--       table, table-bordered table-hover table-striped-->
+    <!--       table, table-bordered table-hover table-striped-->
     <table class="table table-striped table-hover">
-       
+
 
         <!--Table Row-->
         <tr class="active">
@@ -74,9 +73,34 @@ PropiedadCSS: valorPropuedadCSS;-->
         <td>Mexico</td>
         <tr>
 
-
         </tr>
     </table>
+
+
+    <h2>Forms</h2>
+
+<div class="container">
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">Correo:</div>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            <div class="input-group-addon">.com</div>
+                        </div>
+                        
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+    </div>
+
+   
 
 
 
