--- a/HTML/index.html
+++ b/HTML/index.html
@@ -89,7 +89,7 @@ PropiedadCSS: valorPropuedadCSS;-->
                         <div class="input-group">
                             <div class="input-group-addon">Correo:</div>
                             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                            <div class="input-group-addon">.com</div>
+                            <div class="input-group-addon">.es</div>
                         </div>
                         
                     </div>
